--- a/lab/research.html
+++ b/lab/research.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Research Themes</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+  <!-- Navigation bar -->
+  <nav class="navbar">
+    <a href="home.html">Home</a>
+    <a href="research.html" class="active">Research Themes</a>
+    <a href="people.html">People</a>
+    <a href="projects.html">Projects</a>
+    <a href="publications.html">Publications</a>
+  </nav>
+
+  <main class="content">
+    <h1>Research Themes</h1>
+
+    <section>
+      <h2>Theme 1</h2>
+      <p>Short description of the research area.</p>
+    </section>
+
+    <section>
+      <h2>Theme 2</h2>
+      <p>Short description of the research area.</p>
+    </section>
+
+    <section>
+      <h2>Theme 3</h2>
+      <p>Short description of the research area.</p>
+    </section>
+  </main>
+
+</body>
+</html>
 
