--- a/lab/home.html
+++ b/lab/home.html
@@ -16,9 +16,11 @@
   <nav class="navbar">
     <ul class="nav-links">
       <li><a href="home.html">Home</a></li>
+      <li><a href="research.html">Research Themes</a></li>
       <li><a href="people.html">People</a></li>
-      <li><a href="publications.html">Publications</a></li>
       <li><a href="projects.html">Projects</a></li>
+      <li><a href="publications.html">Publications</a></li>
+      
     </ul>
   </nav>
 
