--- a/lab/home.html
+++ b/lab/home.html
@@ -25,13 +25,13 @@
 
     <!-- IIT Madras Logo -->
     <div style="position:absolute; top:20px; left:30px; z-index:3;">
-      <img src="../files/iitm_logo.png" alt="IIT Madras" style="height:60px;">
+      <img src="../files/IITMlogo.png" alt="IIT Madras" style="height:60px;">
     </div>
 
     <!-- Background Slides -->
-    <div class="hero-slide active" style="background-image: url('../files/slide1.jpg');"></div>
-    <div class="hero-slide" style="background-image: url('../files/slide2.jpg');"></div>
-    <div class="hero-slide" style="background-image: url('../files/slide3.jpg');"></div>
+    <div class="hero-slide active" style="background-image: url('../files/S1.png');"></div>
+    <div class="hero-slide" style="background-image: url('../files/S2.png');"></div>
+    <div class="hero-slide" style="background-image: url('../files/S3.png');"></div>
 
     <!-- Overlay -->
     <div class="hero-overlay"></div>
