--- a/lab/home.html
+++ b/lab/home.html
@@ -9,7 +9,7 @@
 
 <body>
 
-  <!-- NAVBAR -->
+<!-- NAVBAR -->
   <nav class="navbar">
     <ul class="nav-links">
       <li><a href="home.html" class="active">Home</a></li>
@@ -21,11 +21,11 @@
   </nav>
 
   <!-- HERO / LANDING SECTION -->
-  <section class="hero">
+<section class="hero">
 
     <!-- IIT Madras Logo -->
-    <div style="position:absolute; top:20px; left:30px; z-index:3;">
-      <img src="../files/IITMlogo.png" alt="IIT Madras" style="height:60px;">
+    <div class="hero-logo">
+        <img src="../files/iitm_logo.png" alt="IIT Madras">
     </div>
 
     <!-- Background Slides -->
@@ -33,19 +33,22 @@
     <div class="hero-slide" style="background-image: url('../files/S2.png');"></div>
     <div class="hero-slide" style="background-image: url('../files/S3.png');"></div>
 
-    <!-- Overlay -->
+    <!-- Dark Overlay -->
     <div class="hero-overlay"></div>
 
     <!-- Hero Text -->
     <div class="hero-content">
-      <h1>Algorithms for Imaging Sciences Lab</h1>
-      <p>
-        Highly accurate, efficient, and deployable image and video
-        enhancement algorithms
-      </p>
+        <div class="hero-text-box">
+            <h1>Algorithms for Imaging Sciences (AIS) Lab</h1>
+            <p>
+                Highly accurate, efficient, and deployable image and video
+                enhancement algorithms
+            </p>
+            <a href="research.html" class="hero-btn">Explore Research →</a>
+        </div>
     </div>
 
-  </section>
+</section>
 
   <!-- MAIN CONTENT -->
   <main>
