--- a/lab/home.html
+++ b/lab/home.html
@@ -4,8 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Algorithms for Imaging Sciences Lab</title>
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;800&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="styles.css">
 </head>
+
 
 <body>
 
@@ -41,8 +46,7 @@
         <div class="hero-text-box">
             <h1>Algorithms for Imaging Sciences (AIS) Lab</h1>
             <p>
-                Highly accurate, efficient, and deployable image and video
-                enhancement algorithms
+                Highly accurate, efficient, and deployable image and video enhancement algorithms
             </p>
             <a href="research.html" class="hero-btn">Explore Research →</a>
         </div>
@@ -68,7 +72,7 @@
     <!-- ANNOUNCEMENTS SECTION -->
     <section id="announcements" class="content">
       <h2>Announcements</h2>
-      <ul style="list-style: none; padding-left: 0;">
+      <ul class="announcement-list">
         <li><strong>March 2025:</strong> Two papers accepted at CVPR 2025.</li>
         <li><strong>February 2025:</strong> New PhD and MS students join AIS Lab.</li>
         <li><strong>January 2025:</strong> AIS Lab website redesigned.</li>
@@ -99,7 +103,7 @@
       </div>
 
       <p style="margin-top: 20px;">
-        <a href="research.html">View all research themes →</a>
+        <a href="research.html" class="hero-btn">View All Research Themes →</a>
       </p>
     </section>
 
