--- a/lab/home.html
+++ b/lab/home.html
@@ -38,30 +38,21 @@
 
   <!-- HERO / LANDING SECTION -->
 <section class="hero">
-
   
-
     <!-- Background Slides -->
     <div class="hero-slide active" style="background-image: url('../files/S1.png');"></div>
     <div class="hero-slide" style="background-image: url('../files/S2.png');"></div>
     <div class="hero-slide" style="background-image: url('../files/S3.png');"></div>
-
-    <!-- Dark Overlay -->
     <div class="hero-overlay"></div>
-
-    <div class="hero-content">
-      <div class="hero-text">
-          <h1>Algorithms for Imaging Sciences Lab</h1>
-          <p>
-              Highly accurate, efficient, and deployable image and video enhancement algorithms
-          </p>
-          <a href="research.html" class="hero-btn">Explore Research →</a>
-      </div>
+</section>
+<!-- INTRO SECTION -->
+<section class="intro">
+  <div class="intro-container">
+    <h1>Algorithms for Imaging Sciences Lab</h1>
+    <p>
+      Highly accurate, efficient, and deployable image and video enhancement algorithms
+    </p>
   </div>
-
-
-   
-
 </section>
 
   <!-- MAIN CONTENT -->
@@ -80,42 +71,44 @@
     </section>
 
     <!-- ANNOUNCEMENTS SECTION -->
-    <section id="announcements" class="content">
-      <h2>Announcements</h2>
-      <ul class="announcement-list">
-        <li><strong>March 2025:</strong> Two papers accepted at CVPR 2025.</li>
-        <li><strong>February 2025:</strong> New PhD and MS students join AIS Lab.</li>
-        <li><strong>January 2025:</strong> AIS Lab website redesigned.</li>
-      </ul>
-    </section>
+<section id="research" class="content">
+  <h2>Research Areas</h2>
 
-    <!-- RESEARCH AREAS PREVIEW -->
-    <section id="research" class="content">
-      <h2>Research Areas</h2>
+  <div class="research-cards">
 
-      <div class="research-cards">
+    <div class="card">
+      <h3>Learning-based Iterative Algorithms</h3>
+      <p>Provably convergent and certifiable learning-based algorithms for restoration tasks.</p>
+    </div>
 
-        <div class="card">
-          <h3>Image & Video Restoration</h3>
-          <p>Learning-based and model-driven restoration algorithms.</p>
-        </div>
+    <div class="card">
+      <h3>Real-time Image and Video Restoration</h3>
+      <p>Efficient state-of-the-art models deployable on edge devices.</p>
+    </div>
 
-        <div class="card">
-          <h3>Generative Models</h3>
-          <p>Diffusion and flow-based generative modeling.</p>
-        </div>
+    <div class="card">
+      <h3>Video Stabilization</h3>
+      <p>Motion-aware stabilization for high-motion and gyroscope-informed scenarios.</p>
+    </div>
 
-        <div class="card">
-          <h3>3D Computer Vision</h3>
-          <p>NeRFs, Gaussian splatting, and geometry-aware vision.</p>
-        </div>
+    <div class="card">
+      <h3>Deepfake Video Detection</h3>
+      <p>Robust detection methods generalizing to diffusion-based deepfakes.</p>
+    </div>
 
-      </div>
+    <div class="card">
+      <h3>Generative Models</h3>
+      <p>Developing text-to-image generative models for Indian content.</p>
+    </div>
 
-      <p style="margin-top: 20px;">
-        <a href="research.html" class="hero-btn">View All Research Themes →</a>
-      </p>
-    </section>
+    <div class="card">
+      <h3>Real-time Generative Models</h3>
+      <p>Develop mathematical models for real-time flow and diffusion models.</p>
+    </div>
+
+  </div>
+
+</section>
 
   </main>
 
