--- a/lab/people.html
+++ b/lab/people.html
@@ -8,68 +8,141 @@
 </head>
 
 <body>
-  <header class="header">
-    <h1 class="lab-title">Algorithms for Imaging Sciences Lab (AIS Lab)</h1>
-    <p class="subtitle">Our Team</p>
-  </header>
+<nav class="navbar">
+  <div class="nav-container">
+    <div class="nav-brand">
+      <img src="../files/iitm_logo.png" alt="IITM Logo" class="nav-logo">
+      <span class="lab-name">AIS Lab</span>
+    </div>
 
-  <nav class="navbar">
     <ul class="nav-links">
       <li><a href="home.html">Home</a></li>
-      <li><a href="people.html">People</a></li>
+      <li><a href="people.html" class="active">People</a></li>
+      <li><a href="research.html">Research</a></li>
       <li><a href="publications.html">Publications</a></li>
       <li><a href="projects.html">Projects</a></li>
     </ul>
-  </nav>
+  </div>
+</nav>
 
-  <main style="padding: 40px 20px; text-align: center;">
-    <section style="max-width: 1000px; margin: auto; text-align: left;">
-    <section class="people-section">
-      <h2>Undergoing</h2>
+<section class="faculty-section">
+  <div class="faculty-container">
 
-      <h3>PhD Students</h3>
-      <ul>
-        <li><strong>Nandhini</strong> July 2025 - </li>
-        <li><strong>Annadanam Tiruvengala Sreedeepthi</strong> Jan 2025 - </li>
-        <li><strong>Wanmathy</strong> (Co-guide: Prof. Saurav Prakash) Jan 2025 - </li>
+    <div class="faculty-image">
+      <img src="../files/pravin_nair.jpg" alt="Pravin Nair">
+    </div>
+
+    <div class="faculty-info">
+      <h1>Dr. Pravin Nair</h1>
+      <p class="designation">Assistant Professor</p>
+      <p>Department of Electrical Engineering</p>
+      <p>Indian Institute of Technology, Madras</p>
+
+      <h3>Research Interests</h3>
+      <p>
+        As a dedicated researcher in computer vision, I have innovated in image and video restoration algorithms,
+        advancing the field through traditional and deep learning methods to solve imaging inverse problems.
+        My vision is to establish a research group dedicated to the mathematical analysis and development of
+        image reconstruction algorithms for both real-time and non-real-time applications.
+      </p>
+
+      <ul class="research-list">
+        <li><strong>Learning-based Iterative Algorithms:</strong> Developing image restoration algorithms with provable convergence guarantees.</li>
+        <li><strong>Real-time and Power-efficient AI:</strong> Creating AI solutions for video restoration that are both real-time and energy-efficient.</li>
+        <li><strong>Deployable Generative Models:</strong> Designing generative models for practical image and video restoration applications.</li>
+        <li><strong>Accelerating Diffusion Models:</strong> Enhancing computational efficiency of diffusion models through rigorous mathematical analysis.</li>
       </ul>
+    </div>
 
-      <h3>Masters by Research</h3>
-      <ul>
-        <li><strong>Karthik Palaniappan</strong> July 2025 - </li>
-        <li><strong>Anuska Roy</strong>, Jan 2026 - </li>
-        <li><strong>Shubhi Sushil Shukla</strong>, Jan 2025 - </li> 
-      </ul>
+  </div>
+</section>
+<section class="students-section">
+  <div class="container">
+    <h2>Current Students</h2>
 
-      <h3>Project Associates</h3>
-      <ul>
-        <li><strong>Suriya R S</strong>, June 2025 - <br> 2K to 4K state-of-the-art video superresolution for DCP cinema content.</li>
-      </ul>
+    <h3>Ph.D. Students</h3>
 
-      <h3>Undergraduate Students</h3>
-      <ul>
-        <li><strong>Varad Bhatkar </strong> May 2025 - <br>Training restoration networks to be contractive. </li>
-        <li><strong>Hrushikesh</strong> May 2025 - <br>Gyroscope sensor based real-time video stabilization. </li>
-        <li><strong>Anupam</strong> Jan 2025 - <br>Developing real-time state-of-the-art algorithms for video superresolution.</li>        
-        <li><strong>Tanish Chudiwal</strong> Sept 2024 - <br>Literature survey on real-time image superresolution.</li>
-      </ul>
-    </section>
+    <div class="student-card">
+      <img src="../files/nandhini.jpg" alt="Nandhini">
+      <div>
+        <h4>Nandhini (July 2025 – )</h4>
+      </div>
+    </div>
 
-    <section class="people-section">
-      <h2>Completed</h2>
+    <div class="student-card">
+      <img src="../files/sreedeepthi.jpg" alt="Sreedeepthi">
+      <div>
+        <h4>Annadanam Tiruvengala Sreedeepthi (Jan 2025 – )</h4>
+      </div>
+    </div>
 
-      <h3>Undergraduate Students</h3>
-      <ul>
-        <li><strong>Srinivasan Kidambi</strong> Jan 2025— July 2025<br> Provable plug-and-play linear attention for image restoration.</li>
-        <li><strong>Tharun Anand</strong> Sept 2024— July 2025<br> Deepfake detection for local edits in videos.</li>
-      </ul>
+    <div class="student-card">
+      <img src="../files/wanmathy.jpg" alt="Wanmathy">
+      <div>
+        <h4>Wanmathy (Co-guide: Prof. Saurav Prakash) (Jan 2025 – )</h4>
+      </div>
+    </div>
 
-      <h3>Research Interns</h3>
-      <ul>
-        <li><strong>Anvitha Vinod</strong> May 2025— July 2025<br>Linear Attention training for image restoration.</li>
-      </ul>
-    </section>
-  </main>
+    <h3>Masters by Research</h3>
+
+    <div class="student-card">
+      <img src="../files/karthik.jpg" alt="Karthik">
+      <div>
+        <h4>Karthik Palaniappan (July 2025 – )</h4>
+      </div>
+    </div>
+
+    <div class="student-card">
+      <img src="../files/anuska.jpg" alt="Anuska">
+      <div>
+        <h4>Anuska Roy (Jan 2026 – )</h4>
+      </div>
+    </div>
+
+    <div class="student-card">
+      <img src="../files/shubhi.jpg" alt="Shubhi">
+      <div>
+        <h4>Shubhi Sushil Shukla (Jan 2025 – )</h4>
+      </div>
+    </div>
+
+    <h3>Project Associate</h3>
+
+    <div class="student-card">
+      <img src="../files/suriya.jpg" alt="Suriya">
+      <div>
+        <h4>Suriya R S (June 2025 – )</h4>
+        <p>2K to 4K state-of-the-art video superresolution for DCP cinema content.</p>
+      </div>
+    </div>
+
+    <h3>Undergraduate Students</h3>
+    <ul class="simple-list">
+      <li><strong>Varad Bhatkar (May 2025 – )</strong> – Training restoration networks to be contractive.</li>
+      <li><strong>Hrushikesh (May 2025 – )</strong> – Gyroscope sensor based real-time video stabilization.</li>
+      <li><strong>Anupam (Jan 2025 – )</strong> – Developing real-time state-of-the-art algorithms for video superresolution.</li>
+      <li><strong>Tanish Chudiwal (Sept 2024 – )</strong> – Literature survey on real-time image superresolution.</li>
+    </ul>
+
+  </div>
+</section>
+
+<section class="students-section">
+  <div class="container">
+    <h2>Completed</h2>
+
+    <h3>Undergraduate Students</h3>
+    <ul class="simple-list">
+      <li><strong>Srinivasan Kidambi (Jan 2025— July 2025)</strong> – Provable plug-and-play linear attention for image restoration.</li>
+      <li><strong>Tharun Anand (Sept 2024— July 2025)</strong> – Deepfake detection for local edits in videos.</li>
+    </ul>
+
+    <h3>Research Interns</h3>
+    <ul class="simple-list">
+      <li><strong>Anvitha Vinod (May 2025— July 2025)</strong> – Linear Attention training for image restoration.</li>
+    </ul>
+  </div>
+</section>
 
   <footer class="footer">
     <p>&copy; 2025 Algorithms for Imaging Sciences Lab. All rights reserved.</p>
