--- a/lab/publications.html
+++ b/lab/publications.html
@@ -23,31 +23,58 @@
     </ul>
   </nav>
 
-  <main style="padding: 40px 20px; text-align: center;">
-    <section style="max-width: 900px; margin: auto; text-align: left;">
-    <section>
+<main class="publications-main">
+  <section class="publications-section">
 
-      <ul>
-        <li>
-          <strong>Softmax is 1/2-Lipschitz: A tight bound across all \ell_p norms</strong><br>
-          <em>Pravin Nair.</em>
-          <a href="https://arxiv.org/abs/2510.23012" target="_blank" rel="noopener noreferrer">[arXiv]</a>
-        </li>
-        <li>
-          <strong>Plug-and-Play Linear Attention for Pre-trained Image and Video Restoration Models</strong><br>
-          <em>Srinivasan Kidambi, and Pravin Nair.</em>
-          <a href="https://arxiv.org/abs/2506.08520" target="_blank" rel="noopener noreferrer">[arXiv]</a>
-        </li>
-        <li>
-          <strong>Detecting Localized Deepfake Manipulations Using Action Unit-Guided Video Representations.</strong><br>
-          <em>Tharun Anand, Siva Sankar, and Pravin Nair.</em><br>
-          <em>Proceedings of the Computer Vision and Pattern Recognition Conference Workshops. 2025.</em>
-          <a href="https://arxiv.org/abs/2503.22121" target="_blank" rel="noopener noreferrer">[arXiv]</a>
-        </li>
-      </ul>
-    </section>
-  </main>
+    <h2 class="section-title">Selected Publications</h2>
 
+    <!-- Publication 1 -->
+    <div class="publication-item">
+      <div class="publication-image">
+        <img src="images/pub1.jpg" alt="Softmax Paper">
+      </div>
+      <div class="publication-content">
+        <h3>Softmax is 1/2-Lipschitz: A tight bound across all ℓp norms</h3>
+        <p class="authors">Pravin Nair.</p>
+        <p class="venue">arXiv, 2025.</p>
+        <div class="pub-links">
+          <a href="https://arxiv.org/abs/2510.23012" target="_blank" rel="noopener">[arXiv]</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Publication 2 -->
+    <div class="publication-item">
+      <div class="publication-image">
+        <img src="images/pub2.jpg" alt="Linear Attention Paper">
+      </div>
+      <div class="publication-content">
+        <h3>Plug-and-Play Linear Attention for Pre-trained Image and Video Restoration Models</h3>
+        <p class="authors">Srinivasan Kidambi, and Pravin Nair.</p>
+        <p class="venue">arXiv, 2025.</p>
+        <div class="pub-links">
+          <a href="https://arxiv.org/abs/2506.08520" target="_blank" rel="noopener">[arXiv]</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Publication 3 -->
+    <div class="publication-item">
+      <div class="publication-image">
+        <img src="images/pub3.jpg" alt="Deepfake Paper">
+      </div>
+      <div class="publication-content">
+        <h3>Detecting Localized Deepfake Manipulations Using Action Unit-Guided Video Representations</h3>
+        <p class="authors">Tharun Anand, Siva Sankar, and Pravin Nair.</p>
+        <p class="venue">CVPR Workshops, 2025.</p>
+        <div class="pub-links">
+          <a href="https://arxiv.org/abs/2503.22121" target="_blank" rel="noopener">[arXiv]</a>
+        </div>
+      </div>
+    </div>
+
+  </section>
+</main>
   <footer class="footer">
     <p>&copy; 2025 Algorithms for Imaging Sciences Lab. All rights reserved.</p>
   </footer>
