--- a/lab/publications.html
+++ b/lab/publications.html
@@ -7,20 +7,27 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header class="header">
-    <div class="container">
-      <h1 class="lab-title">Algorithms for Imaging Sciences Lab (AIS Lab)</h1>
-      <p class="subtitle">Research Publications</p>
-    </div>
-  </header>
+ 
 
   <nav class="navbar">
-    <ul class="nav-links">
-      <li><a href="home.html">Home</a></li>
-      <li><a href="people.html">People</a></li>
-      <li><a href="publications.html">Publications</a></li>
-      <li><a href="projects.html">Projects</a></li>
-    </ul>
+    <div class="nav-container">
+  
+      <!-- Left Side: IITM Logo + AIS Lab -->
+      <div class="nav-brand">
+        <img src="../files/iitm_logo.png" alt="IITM Logo" class="nav-logo">
+        <span class="lab-name">AIS Lab</span>
+      </div>
+  
+      <!-- Right Side Links -->
+      <ul class="nav-links">
+        <li><a href="home.html">Home</a></li>
+        <li><a href="research.html">Research</a></li>
+        <li><a href="people.html">People</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="publications.html" class="active">Publications</a></li>
+      </ul>
+  
+    </div>
   </nav>
 
 <main class="publications-main">
