--- a/lab/home.html
+++ b/lab/home.html
@@ -26,7 +26,6 @@
       <!-- Right Side Links -->
       <ul class="nav-links">
         <li><a href="home.html" class="active">Home</a></li>
-        <li><a href="research.html">Research</a></li>
         <li><a href="people.html">People</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="publications.html">Publications</a></li>
@@ -35,25 +34,28 @@
     </div>
   </nav>
 
+<!-- SPLIT HERO SECTION -->
+<section class="hero-split">
 
-  <!-- HERO / LANDING SECTION -->
-<section class="hero">
-  
-    <!-- Background Slides -->
+  <!-- Left Side: Text -->
+  <div class="hero-left">
+    <h1>AIS Lab</h1>
+    <h2>Algorithms for Imaging Sciences</h2>
+    <p>
+      Department of Electrical Engineering<br>
+      IIT Madras
+    </p>
+  </div>
+
+  <!-- Right Side: Slideshow -->
+  <div class="hero-right">
     <div class="hero-slide active" style="background-image: url('../files/S1.png');"></div>
     <div class="hero-slide" style="background-image: url('../files/S2.png');"></div>
     <div class="hero-slide" style="background-image: url('../files/S3.png');"></div>
-    <div class="hero-overlay"></div>
-</section>
-<!-- INTRO SECTION -->
-<section class="intro">
-  <div class="intro-container">
-    <h1>Algorithms for Imaging Sciences Lab</h1>
-    <p>
-      Highly accurate, efficient, and deployable image and video enhancement algorithms
-    </p>
   </div>
+
 </section>
+
 
   <!-- MAIN CONTENT -->
   <main>
