--- a/lab/home.html
+++ b/lab/home.html
@@ -34,29 +34,26 @@
     </div>
   </nav>
 
-<!-- SPLIT HERO SECTION -->
-<section class="hero-split">
+<!-- FULL HERO SECTION -->
+<section class="hero">
 
-  <!-- Left Side: Text -->
-  <div class="hero-left">
-    <h1>AIS Lab</h1>
-    <h2>Algorithms for Imaging Sciences</h2>
-    <p>
-      Department of Electrical Engineering<br>
-      IIT Madras
-    </p>
-  </div>
+  <!-- Slideshow Images -->
+  <div class="hero-slide active" style="background-image: url('../files/S1.png');"></div>
+  <div class="hero-slide" style="background-image: url('../files/S2.png');"></div>
+  <div class="hero-slide" style="background-image: url('../files/S3.png');"></div>
 
-  <!-- Right Side: Slideshow -->
-  <div class="hero-right">
-    <div class="hero-slide active" style="background-image: url('../files/S1.png');"></div>
-    <div class="hero-slide" style="background-image: url('../files/S2.png');"></div>
-    <div class="hero-slide" style="background-image: url('../files/S3.png');"></div>
+  <!-- Dark Overlay -->
+  <div class="hero-overlay"></div>
+
+  <!-- Text Content -->
+  <div class="hero-content">
+    <h1>Algorithms for Imaging Sciences Lab</h1>
+    <p class="hero-subtitle">Department of Electrical Engineering</p>
+    <p class="hero-subtitle">Indian Institute of Technology Madras</p>
   </div>
 
 </section>
-
-
+  
   <!-- MAIN CONTENT -->
   <main>
 
