--- a/lab/people.html
+++ b/lab/people.html
@@ -29,7 +29,7 @@
   <div class="faculty-container">
 
     <div class="faculty-image">
-      <img src="../files/pravin_nair.jpg" alt="Pravin Nair">
+      <img src="../files/Sir.png" alt="Pravin Nair">
     </div>
 
     <div class="faculty-info">
@@ -63,21 +63,21 @@
     <h3>Ph.D. Students</h3>
 
     <div class="student-card">
-      <img src="../files/nandhini.jpg" alt="Nandhini">
+      <img src="../files/nandhini.png" alt="Nandhini">
       <div>
         <h4>Nandhini (July 2025 – )</h4>
       </div>
     </div>
 
     <div class="student-card">
-      <img src="../files/sreedeepthi.jpg" alt="Sreedeepthi">
+      <img src="../files/deepthi.png" alt="Sreedeepthi">
       <div>
         <h4>Annadanam Tiruvengala Sreedeepthi (Jan 2025 – )</h4>
       </div>
     </div>
 
     <div class="student-card">
-      <img src="../files/wanmathy.jpg" alt="Wanmathy">
+      <img src="../files/wanmathy.png" alt="Wanmathy">
       <div>
         <h4>Wanmathy (Co-guide: Prof. Saurav Prakash) (Jan 2025 – )</h4>
       </div>
@@ -93,14 +93,14 @@
     </div>
 
     <div class="student-card">
-      <img src="../files/anuska.jpg" alt="Anuska">
+      <img src="../files/anuska.png" alt="Anuska">
       <div>
         <h4>Anuska Roy (Jan 2026 – )</h4>
       </div>
     </div>
 
     <div class="student-card">
-      <img src="../files/shubhi.jpg" alt="Shubhi">
+      <img src="../files/shubhi.png" alt="Shubhi">
       <div>
         <h4>Shubhi Sushil Shukla (Jan 2025 – )</h4>
       </div>
@@ -109,7 +109,7 @@
     <h3>Project Associate</h3>
 
     <div class="student-card">
-      <img src="../files/suriya.jpg" alt="Suriya">
+      <img src="../files/suriya.png" alt="Suriya">
       <div>
         <h4>Suriya R S (June 2025 – )</h4>
         <p>2K to 4K state-of-the-art video superresolution for DCP cinema content.</p>
