--- a/lab/home.html
+++ b/lab/home.html
@@ -19,7 +19,7 @@
   
       <!-- Left Side: IITM Logo + AIS Lab -->
       <div class="nav-brand">
-        <img src="../files/iitm_logo.png" alt="IITM Logo" class="nav-logo">
+        <img src="../files/IITMLOGO.jpeg" alt="IITM Logo" class="nav-logo">
         <span class="lab-name">AIS Lab</span>
       </div>
   
