--- a/lab/home.html
+++ b/lab/home.html
@@ -56,60 +56,91 @@
   
   <!-- MAIN CONTENT -->
   <main>
-
-    <!-- ABOUT SECTION -->
-    <section id="about" class="content">
-      <h2>About the Lab</h2>
+    
+  
+  <!-- MISSION + ANNOUNCEMENTS -->
+  <section class="mission-news">
+  
+    <!-- LEFT: Mission (3/4 width) -->
+    <div class="mission">
+      <h2>Our Mission</h2>
       <p>
-        The Algorithms for Imaging Sciences (AIS) Lab focuses on developing
-        state-of-the-art algorithms for image and video enhancement,
-        restoration, and generative modeling. Our research emphasizes
-        theoretical rigor, real-time efficiency, and practical deployability
-        across diverse imaging applications.
+        The AIS Lab develops state-of-the-art learning-based algorithms for
+        image and video restoration, computational imaging, and generative modeling.
+        Our research combines mathematical rigor with practical real-time deployment.
       </p>
-    </section>
-
-    <!-- ANNOUNCEMENTS SECTION -->
-<section id="research" class="content">
-  <h2>Research Areas</h2>
-
-  <div class="research-cards">
-
-    <div class="card">
-      <h3>Learning-based Iterative Algorithms</h3>
-      <p>Provably convergent and certifiable learning-based algorithms for restoration tasks.</p>
+  
+      <ul>
+        <li>Provably convergent learning-based algorithms</li>
+        <li>Real-time image and video restoration systems</li>
+        <li>Theory-driven deep learning for inverse problems</li>
+      </ul>
+  
+      <p class="join-text">
+        We welcome motivated students interested in Computational Imaging,
+        Image Processing, and Computer Vision.
+      </p>
     </div>
-
-    <div class="card">
-      <h3>Real-time Image and Video Restoration</h3>
-      <p>Efficient state-of-the-art models deployable on edge devices.</p>
+  
+    <!-- RIGHT: ANNOUNCEMENTS BOX -->
+    <div class="announcement-box">
+      <h3>Announcements</h3>
+      <ul>
+        <li>Two papers accepted at ECCV 2024</li>
+        <li>Paper accepted at CVPR 2024</li>
+        <li>New PhD openings for 2025</li>
+        <li>TIH-NSF Indo-US collaboration project awarded</li>
+      </ul>
     </div>
-
-    <div class="card">
-      <h3>Video Stabilization</h3>
-      <p>Motion-aware stabilization for high-motion and gyroscope-informed scenarios.</p>
+  
+  </section>
+  
+  
+  <!-- RESEARCH AREAS -->
+  <section id="research" class="content">
+    <h2>Research Areas</h2>
+  
+    <div class="research-cards">
+  
+      <div class="card">
+        <h3> Learning-based Iterative Algorithms</h3>
+        <p>Provably convergent and certifiable learning-based algorithms for restoration tasks.</p>
+      </div>
+  
+      <div class="card">
+        <h3> Real-time Image and Video Restoration</h3>
+        <p>Efficient state-of-the-art models deployable on edge devices.</p>
+      </div>
+  
+      <div class="card">
+        <h3> Video Stabilization</h3>
+        <p>Motion-aware stabilization for high-motion and gyroscope-informed scenarios.</p>
+      </div>
+  
+      <div class="card">
+        <h3> Deepfake Video Detection</h3>
+        <p>Robust detection methods generalizing to diffusion-based deepfakes.</p>
+      </div>
+  
+      <div class="card">
+        <h3> Generative Models</h3>
+        <p>Developing text-to-image generative models for Indian content.</p>
+      </div>
+  
+      <div class="card">
+        <h3> Real-time Generative Models</h3>
+        <p>Develop mathematical models for real-time flow and diffusion models.</p>
+      </div>
+  
     </div>
+  
+  </section>
 
-    <div class="card">
-      <h3>Deepfake Video Detection</h3>
-      <p>Robust detection methods generalizing to diffusion-based deepfakes.</p>
-    </div>
+</main>
 
-    <div class="card">
-      <h3>Generative Models</h3>
-      <p>Developing text-to-image generative models for Indian content.</p>
-    </div>
 
-    <div class="card">
-      <h3>Real-time Generative Models</h3>
-      <p>Develop mathematical models for real-time flow and diffusion models.</p>
-    </div>
 
-  </div>
 
-</section>
-
-  </main>
 
   <!-- FOOTER -->
   <footer class="footer">
