--- a/lab/publications.html
+++ b/lab/publications.html
@@ -14,14 +14,13 @@
   
       <!-- Left Side: IITM Logo + AIS Lab -->
       <div class="nav-brand">
-        <img src="../files/iitm_logo.png" alt="IITM Logo" class="nav-logo">
+        <img src="../files/IITMLOGO.jpeg" alt="IITM Logo" class="nav-logo">
         <span class="lab-name">AIS Lab</span>
       </div>
   
       <!-- Right Side Links -->
       <ul class="nav-links">
         <li><a href="home.html">Home</a></li>
-        <li><a href="research.html">Research</a></li>
         <li><a href="people.html">People</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="publications.html" class="active">Publications</a></li>
