--- a/lab/projects.html
+++ b/lab/projects.html
@@ -15,14 +15,24 @@
   </header>
 
   <nav class="navbar">
-    <ul class="nav-links">
-      <li><a href="home.html">Home</a></li>
-      <li><a href="people.html">People</a></li>
-      <li><a href="publications.html">Publications</a></li>
-      <li><a href="projects.html">Projects</a></li>
-    </ul>
+    <div class="nav-container">
+  
+      <!-- Left Side: IITM Logo + AIS Lab -->
+      <div class="nav-brand">
+        <img src="../files/IITMLOGO.jpeg" alt="IITM Logo" class="nav-logo">
+        <span class="lab-name">AIS Lab</span>
+      </div>
+  
+      <!-- Right Side Links -->
+      <ul class="nav-links">
+        <li><a href="home.html">Home</a></li>
+        <li><a href="people.html">People</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="publications.html" class="active">Publications</a></li>
+      </ul>
+  
+    </div>
   </nav>
-
 
   <main style="padding: 40px 20px; text-align: center;">
     <section style="max-width: 1000px; margin: auto; text-align: left;">
@@ -61,4 +71,5 @@
     <p>&copy; 2025 Algorithms for Imaging Sciences Lab. All rights reserved.</p>
   </footer>
 </body>
+
 </html>
