--- a/lab/people.html
+++ b/lab/people.html
@@ -8,22 +8,25 @@
 </head>
 
 <body>
-<nav class="navbar">
-  <div class="nav-container">
-    <div class="nav-brand">
-      <img src="../files/iitm_logo.png" alt="IITM Logo" class="nav-logo">
-      <span class="lab-name">AIS Lab</span>
+  <nav class="navbar">
+    <div class="nav-container">
+  
+      <!-- Left Side: IITM Logo + AIS Lab -->
+      <div class="nav-brand">
+        <img src="../files/IITMLOGO.jpeg" alt="IITM Logo" class="nav-logo">
+        <span class="lab-name">AIS Lab</span>
+      </div>
+  
+      <!-- Right Side Links -->
+      <ul class="nav-links">
+        <li><a href="home.html">Home</a></li>
+        <li><a href="people.html">People</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="publications.html" class="active">Publications</a></li>
+      </ul>
+  
     </div>
-
-    <ul class="nav-links">
-      <li><a href="home.html">Home</a></li>
-      <li><a href="people.html" class="active">People</a></li>
-      <li><a href="research.html">Research</a></li>
-      <li><a href="publications.html">Publications</a></li>
-      <li><a href="projects.html">Projects</a></li>
-    </ul>
-  </div>
-</nav>
+  </nav>
 
 <section class="faculty-section">
   <div class="faculty-container">
