--- a/lab/home.html
+++ b/lab/home.html
@@ -98,13 +98,13 @@
         <li>
           <strong>Softmax is 1/2-Lipschitz: A Tight Bound Across All ℓ<sub>p</sub> Norms</strong><br>
           Pravin Nair.<br>
-          Published in Transactions on Machine Learning Research (TMLR), 2025. [arXiv]
+          Published in Transactions on Machine Learning Research (TMLR), 2025. 
         </li>
       
         <li>
           <strong>Detecting Localized Deepfake Manipulations Using Action Unit-Guided Video Representations</strong><br>
           Tharun Anand, Siva Sankar, and Pravin Nair.<br>
-          CVPR Workshops, 2025. [arXiv]
+          CVPR Workshops, 2025.
         </li>
       
         <li>
@@ -118,7 +118,7 @@
     </div>   
   </section>
   
-  
+  <div class="section-divider"></div>
   <!-- RESEARCH AREAS -->
   <section id="research" class="content">
     <h2>Research Areas</h2>
